corpus/interpolation.txt
================================================================================
interpolation expression
================================================================================

${something + 1 * something}

--------------------------------------------------------------------------------

(fragment
	(interpolation
		(binary_expression
			(identifier)
      (binary_expression
        (number) 
        (identifier)))))

================================================================================
interolation expression in attribute
================================================================================

<div class="${something}"></div>

--------------------------------------------------------------------------------

(fragment
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (interpolation
            (identifier)))))
    (end_tag
      (tag_name))))
